src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F901_F901.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    RaiseNotImplemented: ~
  location:
    row: 2
    column: 10
  end_location:
    row: 2
    column: 24
  fix:
    content: NotImplementedError
    location:
      row: 2
      column: 10
    end_location:
      row: 2
      column: 24
  parent: ~
- kind:
    RaiseNotImplemented: ~
  location:
    row: 6
    column: 10
  end_location:
    row: 6
    column: 24
  fix:
    content: NotImplementedError
    location:
      row: 6
      column: 10
    end_location:
      row: 6
      column: 24
  parent: ~

