src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__default_typing_modules.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName: db
  location:
    row: 6
    column: 34
  end_location:
    row: 6
    column: 38
  fix: ~
  parent: ~

