src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__extra_typing_modules.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UndefinedName: Class
  location:
    row: 7
    column: 13
  end_location:
    row: 7
    column: 20
  fix: ~
  parent: ~

